// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <PlainText /> rendering should render multiple parargraphs of text correctly 1`] = `
<div>
  <div
    className="row mode_input plain-text"
  >
    <div
      className="col-12"
    >
      <div
        className="citation plain-text__box"
      >
        <div
          className="label"
        />
        <div
          className="plain-text__box-p plain-text__box-p-1"
          key="undefined-1"
        />
        <div
          className="plain-text__box-p plain-text__box-p-2"
          key="undefined-2"
        />
        <div
          className="plain-text__box-p plain-text__box-p-3"
          key="undefined-3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Form component <PlainText /> rendering should render multiple parargraphs of text with substitution correctly 1`] = `
<div>
  <div
    className="row mode_input plain-text"
  >
    <div
      className="col-12"
    >
      <div
        className="citation plain-text__box"
      >
        <div
          className="label"
        />
        <div
          className="plain-text__box-p plain-text__box-p-1"
          key="undefined-1"
        />
        <div
          className="plain-text__box-p plain-text__box-p-2"
          key="undefined-2"
        />
        <div
          className="plain-text__box-p plain-text__box-p-3"
          key="undefined-3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Form component <PlainText /> rendering should render no plain text when not visible 1`] = `<div />`;

exports[`Form component <PlainText /> rendering should render plain text correctly 1`] = `
<div>
  <div
    className="row mode_input plain-text"
  >
    <div
      className="col-12"
    >
      <div
        className="citation plain-text__box"
      >
        <div
          className="label"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Form component <PlainText /> rendering should render plain text with text substitution correctly 1`] = `
<div>
  <div
    className="row mode_input plain-text"
  >
    <div
      className="col-12"
    >
      <div
        className="citation plain-text__box"
      >
        <div
          className="label"
        />
      </div>
    </div>
  </div>
</div>
`;
